--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detecção Facial v1.0.5</title>
+    <title>Detecção Facial v1.0.6</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.23.0"></script>
 </head>
 <body>
-    <h1>Detecção Facial 5</h1>
+    <h1>Detecção Facial 6</h1>
 
     <button id="startCamera">Iniciar Câmera</button>
 
@@ -29,25 +29,26 @@
                     const stream = await navigator.mediaDevices.getUserMedia({ video: true });
 
                     video.srcObject = stream;
-                    await video.play(); // Garante que o vídeo está sendo reproduzido
+                    
+                    // Adicionando um ouvinte para verificar quando o vídeo está totalmente carregado
+                    video.addEventListener('loadeddata', async () => {
+                        await video.play(); // Garante que o vídeo está sendo reproduzido
 
-                    // Aguarda um momento para garantir que o vídeo está reproduzindo antes de detectar
-                    await new Promise(resolve => setTimeout(resolve, 2000));
+                        const canvasSize = { width: video.width, height: video.height };
+                        faceapi.matchDimensions(canvas, canvasSize);
 
-                    const canvasSize = { width: video.width, height: video.height };
-                    faceapi.matchDimensions(canvas, canvasSize);
+                        setInterval(async () => {
+                            const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
+                                .withFaceLandmarks()
+                                .withFaceDescriptors();
 
-                    setInterval(async () => {
-                        const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
-                            .withFaceLandmarks()
-                            .withFaceDescriptors();
+                            context.clearRect(0, 0, canvas.width, canvas.height);
 
-                        context.clearRect(0, 0, canvas.width, canvas.height);
-
-                        const resizedDetections = faceapi.resizeResults(detections, canvasSize);
-                        faceapi.draw.drawDetections(canvas, resizedDetections);
-                        faceapi.draw.drawFaceLandmarks(canvas, resizedDetections);
-                    }, 100);
+                            const resizedDetections = faceapi.resizeResults(detections, canvasSize);
+                            faceapi.draw.drawDetections(canvas, resizedDetections);
+                            faceapi.draw.drawFaceLandmarks(canvas, resizedDetections);
+                        }, 100);
+                    });
                 } catch (error) {
                     console.error('Erro ao acessar a câmera:', error);
                 }
