--- a/index.html
+++ b/index.html
@@ -3,59 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detecção Facial v1.0.6</title>
+    <title>Detecção Facial v1.0.7</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.23.0"></script>
 </head>
-<body>
-    <h1>Detecção Facial 6</h1>
-
-    <button id="startCamera">Iniciar Câmera</button>
-
-    <video id="video" width="640" height="480" style="display:none;"></video>
-
-    <canvas id="canvas" width="640" height="480"></canvas>
+<body style="margin: 0; overflow: hidden;">
+    <video id="video" width="100%" height="100%" autoplay playsinline></video>
 
     <script>
         $(document).ready(async function () {
-            const startButton = document.getElementById('startCamera');
             const video = document.getElementById('video');
-            const canvas = document.getElementById('canvas');
-            const context = canvas.getContext('2d');
 
-            startButton.addEventListener('click', async () => {
-                try {
-                    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+            try {
+                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+                video.srcObject = stream;
 
-                    video.srcObject = stream;
-                    
-                    // Adicionando um ouvinte para verificar quando o vídeo está totalmente carregado
-                    video.addEventListener('loadeddata', async () => {
-                        await video.play(); // Garante que o vídeo está sendo reproduzido
+                video.addEventListener('loadeddata', async () => {
+                    await video.play(); // Garante que o vídeo está sendo reproduzido
 
-                        const canvasSize = { width: video.width, height: video.height };
-                        faceapi.matchDimensions(canvas, canvasSize);
+                    const canvas = faceapi.createCanvasFromMedia(video);
+                    document.body.append(canvas);
 
-                        setInterval(async () => {
-                            const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
-                                .withFaceLandmarks()
-                                .withFaceDescriptors();
+                    const displaySize = { width: video.width, height: video.height };
+                    faceapi.matchDimensions(canvas, displaySize);
 
-                            context.clearRect(0, 0, canvas.width, canvas.height);
+                    setInterval(async () => {
+                        const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
+                            .withFaceLandmarks()
+                            .withFaceDescriptors();
 
-                            const resizedDetections = faceapi.resizeResults(detections, canvasSize);
-                            faceapi.draw.drawDetections(canvas, resizedDetections);
-                            faceapi.draw.drawFaceLandmarks(canvas, resizedDetections);
-                        }, 100);
-                    });
-                } catch (error) {
-                    console.error('Erro ao acessar a câmera:', error);
-                }
-            });
-
-            // Disparar o clique no botão automaticamente ao carregar a página
-            startButton.click();
+                        const resizedDetections = faceapi.resizeResults(detections, displaySize);
+                        canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
+                        faceapi.draw.drawDetections(canvas, resizedDetections);
+                        faceapi.draw.drawFaceLandmarks(canvas, resizedDetections);
+                    }, 100);
+                });
+            } catch (error) {
+                console.error('Erro ao acessar a câmera:', error);
+            }
         });
     </script>
 </body>
