--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detecção Facial v1.1.1</title>
+    <title>Detecção Facial v1.1.3</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.23.0"></script>
@@ -35,14 +35,13 @@
             padding: 10px;
         }
 
-        #no-face-indicator {
+        #no-face-indicator, #face-detected-indicator {
             position: absolute;
-            top: 50%;
+            top: 10px;
             left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 20px;
-            color: red;
-            display: none;
+            transform: translateX(-50%);
+            font-size: 18px;
+            color: #fff;
         }
     </style>
 </head>
@@ -52,10 +51,11 @@
     <canvas id="canvas"></canvas>
 
     <footer>
-        <p>Versão 1.1.1</p>
+        <p>Versão 1.1.3</p>
     </footer>
 
     <div id="no-face-indicator">Nenhum rosto detectado</div>
+    <div id="face-detected-indicator" style="display: none;">Rosto detectado</div>
 
     <script>
         $(document).ready(async function () {
@@ -63,8 +63,13 @@
             const canvas = document.getElementById('canvas');
             const context = canvas.getContext('2d');
             const noFaceIndicator = document.getElementById('no-face-indicator');
+            const faceDetectedIndicator = document.getElementById('face-detected-indicator');
 
             try {
+                await faceapi.nets.tinyFaceDetector.loadFromUri('https://cdn.jsdelivr.net/npm/face-api.js/models');
+                await faceapi.nets.faceLandmark68Net.loadFromUri('https://cdn.jsdelivr.net/npm/face-api.js/models');
+                await faceapi.nets.faceRecognitionNet.loadFromUri('https://cdn.jsdelivr.net/npm/face-api.js/models');
+
                 const stream = await navigator.mediaDevices.getUserMedia({ video: true });
                 video.srcObject = stream;
 
@@ -83,6 +88,7 @@
 
                         if (detections.length > 0) {
                             noFaceIndicator.style.display = 'none';
+                            faceDetectedIndicator.style.display = 'block';
 
                             const resizedDetections = faceapi.resizeResults(detections, displaySize);
 
@@ -92,6 +98,7 @@
                         } else {
                             // Exibe o indicador visual de nenhum rosto detectado
                             noFaceIndicator.style.display = 'block';
+                            faceDetectedIndicator.style.display = 'none';
                         }
                     }, 100);
                 });
