--- a/index.html
+++ b/index.html
@@ -1,111 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detecção Facial v1.1.3</title>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.23.0"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        #video, #canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        #canvas {
-            background: transparent;
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-
-        #no-face-indicator, #face-detected-indicator {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 18px;
-            color: #fff;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <style> body {padding: 0; margin: 0; background-color: #8B0000;} </style>
 </head>
 <body>
-    <video id="video" autoplay playsinline></video>
+  <button onclick="toggleVisibility()">Visibilidade das conexões (on/off)</button>
+  <script>
+    let creatures = [];
+    let tremorIntensity = 0.0;
+    let lineVisible = true;
+    let flockingActive = false;
+    let maxDistance = 35;
 
-    <canvas id="canvas"></canvas>
+    function setup() {
+      createCanvas(400, 550);
+      setTimeout(() => {
+        flockingActive = true;
+        setTimeout(() => {
+          flockingActive = false;
+        }, random(1, 2) * 5);
+      }, 1 * 1);
+    }
 
-    <footer>
-        <p>Versão 1.1.3</p>
-    </footer>
+    function draw() {
+      background(0);
 
-    <div id="no-face-indicator">Nenhum rosto detectado</div>
-    <div id="face-detected-indicator" style="display: none;">Rosto detectado</div>
+      for (let i = 0; i < creatures.length; i++) {
+        creatures[i].display();
+        creatures[i].swim();
+        creatures[i].checkWallCollision();
+        creatures[i].establishConnections(creatures);
+        if (lineVisible) {
+          creatures[i].displayConnections();
+        }
+        creatures[i].approachConnectedCreatures();
+        if (lineVisible) {
+          creatures[i].displayConnections();
+        }
+        creatures[i].randomSpeedChange();
+        creatures[i].returnToDefaultSpeed();
+        creatures[i].schoolingBehavior();
+        creatures[i].flockingEffect();
+        creatures[i].repelNearbyCreatures(creatures);
+      }
+    }
 
-    <script>
-        $(document).ready(async function () {
-            const video = document.getElementById('video');
-            const canvas = document.getElementById('canvas');
-            const context = canvas.getContext('2d');
-            const noFaceIndicator = document.getElementById('no-face-indicator');
-            const faceDetectedIndicator = document.getElementById('face-detected-indicator');
+    function mousePressed() {
+      let newCreature = new Creature(mouseX, mouseY);
+      creatures.push(newCreature);
+    }
 
-            try {
-                await faceapi.nets.tinyFaceDetector.loadFromUri('https://cdn.jsdelivr.net/npm/face-api.js/models');
-                await faceapi.nets.faceLandmark68Net.loadFromUri('https://cdn.jsdelivr.net/npm/face-api.js/models');
-                await faceapi.nets.faceRecognitionNet.loadFromUri('https://cdn.jsdelivr.net/npm/face-api.js/models');
+    function toggleVisibility() {
+      lineVisible = !lineVisible;
+    }
 
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                video.srcObject = stream;
+    class Creature {
+      constructor(x, y) {
+        this.x = x;
+        this.y = y;
+        this.size = 1; // Adjust size as needed
+        this.direction = createVector(1, 0);
+        this.swimmingSpeed = 2;
+        this.stopPeriod = false;
+        this.randomSwimTime = random(5, 20) * 60;
+        this.stopTime = random(1, 2) * 60;
+        this.swimFrames = 0;
+        this.connections = [];
+        this.canConnect = true;
+      
+        this.speedChangeFrames = 0;
+        this.defaultSpeed = 2;
+        this.returnToDefaultSpeedTime = random(10, 20) * 60;
+        this.returnToDefaultSpeedFrames = 0;
+        this.flockTarget = createVector(random(width), random(height));
+      }
 
-                video.addEventListener('loadeddata', async () => {
-                    await video.play(); // Garante que o vídeo está sendo reproduzido
+      display() {
+        fill(255);
+        ellipse(this.x, this.y, this.size);
+      }
 
-                    const displaySize = { width: video.width, height: video.height };
-                    faceapi.matchDimensions(canvas, displaySize);
+      swim() {
+        if (this.stopPeriod) {
+          this.swimFrames++;
+          if (this.swimFrames >= this.stopTime) {
+            this.stopPeriod = false;
+            this.randomSwimTime = random(5, 20) * 60;
+            this.swimFrames = 0;
+          }
+        } else {
+          if (this.swimFrames % 60 === 0 && !flockingActive) {
+            this.direction = createVector(random(-1, 1), random(-1, 1)).normalize();
+          }
 
-                    setInterval(async () => {
-                        const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
-                            .withFaceLandmarks()
-                            .withFaceDescriptors();
+          this.x += this.direction.x * this.swimmingSpeed;
+          this.y += this.direction.y * this.swimmingSpeed;
 
-                        context.clearRect(0, 0, canvas.width, canvas.height);
+          this.x += random(-tremorIntensity, tremorIntensity);
+          this.y += random(-tremorIntensity, tremorIntensity);
 
-                        if (detections.length > 0) {
-                            noFaceIndicator.style.display = 'none';
-                            faceDetectedIndicator.style.display = 'block';
+          this.x = constrain(this.x, 0, width);
+          this.y = constrain(this.y, 0, height);
 
-                            const resizedDetections = faceapi.resizeResults(detections, displaySize);
+          this.swimFrames++;
 
-                            // Adiciona um quadrado de detecção ao redor do rosto
-                            faceapi.draw.drawDetections(canvas, resizedDetections);
-                            faceapi.draw.drawFaceLandmarks(canvas, resizedDetections);
-                        } else {
-                            // Exibe o indicador visual de nenhum rosto detectado
-                            noFaceIndicator.style.display = 'block';
-                            faceDetectedIndicator.style.display = 'none';
-                        }
-                    }, 100);
-                });
-            } catch (error) {
-                console.error('Erro ao acessar a câmera:', error);
+          if (this.swimFrames >= this.randomSwimTime) {
+            this.stopPeriod = true;
+            this.stopTime = random(1, 2) * 60;
+            this.swimFrames = 0;
+          }
+        }
+      }
+
+      randomSpeedChange() {
+        this.speedChangeFrames++;
+        if (this.speedChangeFrames >= this.randomSpeedChangeTime) {
+          this.swimmingSpeed = random(2, 4);
+          this.speedChangeFrames = 0;
+          this.randomSpeedChangeTime = random() 
+        }
+      }
+
+      returnToDefaultSpeed() {
+        this.returnToDefaultSpeedFrames++;
+        if (this.returnToDefaultSpeedFrames >= this.returnToDefaultSpeedTime) {
+          this.swimmingSpeed = this.defaultSpeed;
+          this.returnToDefaultSpeedFrames = 0;
+          this.returnToDefaultSpeedTime = random() 
+        }
+      }
+
+      establishConnections(otherCreatures) {
+        this.connections = [];
+
+        if (this.canConnect) {
+          for (let i = 0; i < otherCreatures.length; i++) {
+            if (otherCreatures[i] !== this && otherCreatures[i].canConnect && this.connections.length < 6) {
+              let distance = dist(this.x, this.y, otherCreatures[i].x, otherCreatures[i].y);
+              if (distance > 10 && distance < 75) {
+                this.connections.push(otherCreatures[i]);
+                otherCreatures[i].connections.push(this);
+              }
             }
-        });
-    </script>
+          }
+
+          if (this.connections.length >= 1000) {
+            this.canConnect = false;
+          }
+        }
+      }
+
+      displayConnections() {
+        for (let i = 1; i < this.connections.length; i++) {
+          stroke('#FF0000');
+
+          line(this.x, this.y, this.connections[i].x, this.connections[i].y);
+        }
+      }
+
+      approachConnectedCreatures() {
+        for (let i = 0; i < this.connections.length; i++) {
+          let targetX = this.connections[i].x;
+          let targetY = this.connections[i].y;
+
+          this.x = lerp(this.x, targetX, 0.004);
+          this.y = lerp(this.y, targetY, 0.004);
+        }
+      }
+
+      checkWallCollision() {
+        if (this.x - this.size / 2 <= 0 || this.x + this.size / 2 >= width) {
+          this.direction.x *= -1;
+        }
+
+        if (this.y - this.size / 2 <= 0 || this.y + this.size / 2 >= height) {
+          this.direction.y *= -1;
+        }
+      }
+
+      flockingEffect() {
+        if (flockingActive) {
+          for (let i = 0; i < this.connections.length; i++) {
+            let distance = dist(this.x, this.y, this.connections[i].x, this.connections[i].y);
+            if (distance < 90) {
+              this.connections[i].flockTarget = this.flockTarget.copy();
+            }
+          }
+        }
+      }
+
+      schoolingBehavior() {
+        if (this.connections.length > 0) {
+          let averageX = 0;
+          let averageY = 0;
+
+          for (let i = 0; i < this.connections.length; i++) {
+            averageX += this.connections[i].x;
+            averageY += this.connections[i].y;
+          }
+
+          averageX /= this.connections.length;
+          averageY /= this.connections.length;
+
+          this.x = lerp(this.x, averageX, 0.1);
+          this.y = lerp(this.y, averageY, 0.1);
+        }
+      }
+
+      repelNearbyCreatures(otherCreatures) {
+        for (let i = 0; i < otherCreatures.length; i++) {
+          if (otherCreatures[i] !== this) {
+            let distance = dist(this.x, this.y, otherCreatures[i].x, otherCreatures[i].y);
+            if (distance < maxDistance) {
+              let repelForce = createVector(this.x - otherCreatures[i].x, this.y - otherCreatures[i].y);
+              repelForce.setMag(2.1);
+              this.x += repelForce.x;
+              this.y += repelForce.y;
+            }
+          }
+        }
+      }
+    }
+  </script>
 </body>
 </html>
