--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>App de Mensagens Futurista</title>
-  /
-
-<style>
-    body {
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       background-color: #121212;
       color: #ffffff;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
       position: relative;
-      min-height: 100vh;
       z-index: 0;
     }
     .container {
       max-width: 800px;
-      margin: 70px auto 20px auto;
+      margin: 60px auto 0 auto;
       padding: 20px;
       position: relative;
       z-index: 10;
@@ -77,12 +75,15 @@
       text-decoration: underline;
     }
     #messages {
-      height: calc(100vh - 200px);
+      position: fixed;
+      top: 60px;
+      bottom: 80px;
+      left: 0;
+      right: 0;
       overflow-y: auto;
-      margin: 20px 0;
-      padding: 0 20px;
-      position: relative;
+      padding: 20px;
       z-index: 50;
+      box-sizing: border-box;
     }
     .message {
       margin: 10px 0;
@@ -112,11 +113,12 @@
       padding: 5px 10px;
     }
     .message-input {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      right: 20px;
       display: flex;
       gap: 10px;
-      position: sticky;
-      bottom: 20px;
-      padding: 0 20px;
       z-index: 200;
     }
     #message-content {
@@ -213,6 +215,7 @@
     let currentPartnerId = null;
     let lastMessageId = null;
     let typingTimeout = null;
+    let isTypingDisplayed = false;
 
     const feedbackDiv = document.getElementById('feedback');
     const hamburger = document.getElementById('hamburger');
@@ -230,17 +233,22 @@
     }
 
     function showTypingIndicator() {
+      if (isTypingDisplayed) return;
       const typingDiv = document.createElement('div');
       typingDiv.id = 'typing-indicator';
       typingDiv.className = 'message typing';
       typingDiv.textContent = '...';
       messagesDiv.appendChild(typingDiv);
       messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      isTypingDisplayed = true;
     }
 
     function hideTypingIndicator() {
       const typingDiv = document.getElementById('typing-indicator');
-      if (typingDiv) typingDiv.remove();
+      if (typingDiv) {
+        typingDiv.remove();
+        isTypingDisplayed = false;
+      }
     }
 
     async function updateTypingStatus(isTyping) {
@@ -294,6 +302,7 @@
       messageInput.style.display = 'none';
       document.getElementById('messages').innerHTML = '';
       userIdDisplay.style.display = 'block';
+      hideTypingIndicator();
       showFeedback('Desconectado da conversa.', true);
     });
 
@@ -310,6 +319,7 @@
       document.getElementById('disconnect').style.display = 'none';
       document.getElementById('messages').innerHTML = '';
       userIdDisplay.style.display = 'none';
+      hideTypingIndicator();
       showFeedback('Logout realizado com sucesso!', true);
       showLoginForm();
     });
@@ -468,9 +478,9 @@
 
     supabase
       .channel('public:typing_status')
-      .on('postgres_changes', { event: 'UPDATE', schema: 'public', table: 'typing_status' }, payload => {
-        const { user_id, is_typing } = payload.new;
-        if (currentPartnerId && user_id === currentPartnerId && currentUser.id === payload.new.partner_id) {
+      .on('postgres_changes', { event: '*', schema: 'public', table: 'typing_status' }, payload => {
+        const { user_id, is_typing, partner_id } = payload.new || payload.old;
+        if (currentPartnerId && user_id === currentPartnerId && partner_id === currentUser.id) {
           if (is_typing) {
             showTypingIndicator();
           } else {
